--- a/index.html
+++ b/index.html
@@ -5,20 +5,31 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Personal Expense Tracker</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
 </head>
 <body>
     <header>
-        <h1>Personal Expense Tracker</h1>
+        <h1><i class="fas fa-wallet"></i> Personal Expense Tracker</h1>
         <nav>
             <ul>
-                <li><a href="#expense-form">Add Expense</a></li>
-                <li><a href="#expense-list">View Expenses</a></li>
-                <li><a href="#expense-summary">Summary</a></li>
-                <li><a href="#expense-chart">Charts</a></li>
+                <li><a href="#dashboard"><i class="fas fa-tachometer-alt"></i> Dashboard</a></li>
+                <li><a href="#expense-form"><i class="fas fa-plus-circle"></i> Add Expense</a></li>
+                <li><a href="#expense-list"><i class="fas fa-list"></i> View Expenses</a></li>
+                <li><a href="#expense-summary"><i class="fas fa-chart-pie"></i> Summary</a></li>
+                <li><a href="#expense-budget"><i class="fas fa-money-bill-wave"></i> Budget</a></li>
             </ul>
         </nav>
     </header>
     <main>
+        <section id="dashboard">
+            <h2>Dashboard</h2>
+            <div class="dashboard-widgets">
+                <div class="widget" id="total-spent"></div>
+                <div class="widget" id="budget-status"></div>
+                <div class="widget" id="top-category"></div>
+                <div class="widget" id="recent-expenses"></div>
+            </div>
+        </section>
         <section id="expense-form">
             <h2>Add New Expense</h2>
             <form id="add-expense-form">
@@ -74,11 +85,17 @@
             <h2>Expense Summary</h2>
             <div id="total-expenses"></div>
             <div id="category-breakdown"></div>
-        </section>
-        <section id="expense-chart">
-            <h2>Expense Charts</h2>
             <canvas id="category-chart"></canvas>
             <canvas id="trend-chart"></canvas>
+        </section>
+        <section id="expense-budget">
+            <h2>Budget Management</h2>
+            <form id="budget-form">
+                <label for="budget-amount">Monthly Budget:</label>
+                <input type="number" id="budget-amount" step="0.01" required>
+                <button type="submit">Set Budget</button>
+            </form>
+            <div id="budget-progress"></div>
         </section>
     </main>
     <footer>
