Implement expense categorization AI and introduce data export functionality

--- a/index.html
+++ b/index.html
@@ -123,6 +123,21 @@
             </form>
             <div id="savings-goals-list"></div>
         </section>
+        <section id="ai-categorization">
+            <h2>AI Expense Categorization</h2>
+            <p>Our AI can help categorize your expenses based on the description.</p>
+            <form id="ai-categorize-form">
+                <label for="expense-description">Expense Description:</label>
+                <input type="text" id="expense-description" required>
+                <button type="submit">Suggest Category</button>
+            </form>
+            <div id="ai-suggestion"></div>
+        </section>
+        <section id="data-export">
+            <h2>Export Data</h2>
+            <button id="export-csv">Export to CSV</button>
+            <button id="export-json">Export to JSON</button>
+        </section>
     </main>
     <footer>
         <p>&copy; 2024 Personal Expense Tracker. All rights reserved.</p>
